--- a/TEAMMentor.SauceLabs.AutomationTest/TEAMMentor.SauceLabs.AutomationTest.csproj
+++ b/TEAMMentor.SauceLabs.AutomationTest/TEAMMentor.SauceLabs.AutomationTest.csproj
@@ -61,6 +61,7 @@
     <Compile Include="BaseTest.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TMFour.cs" />
     <Compile Include="TMTests.cs" />
   </ItemGroup>
   <ItemGroup>
