--- a/TEAMMentor.BrowserAutomation.Test/TEAMMentor.BrowserAutomation.Test.csproj
+++ b/TEAMMentor.BrowserAutomation.Test/TEAMMentor.BrowserAutomation.Test.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="BaseClass\BaseTest.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="ExtensionMethods\ExtensionMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TM3.5\ArticleDelete.cs" />
   </ItemGroup>
@@ -71,7 +72,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ExtensionMethods\" />
     <Folder Include="FlareTest\" />
   </ItemGroup>
   <ItemGroup>
