--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,5 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+/TEAMMentor.BrowserAutomationTest.sln.ide/*.ide
+/TEAMMentor.BrowserAutomationTest.sln.ide
