--- a/TEAMMentor.SauceLabs.AutomationTest/packages.config
+++ b/TEAMMentor.SauceLabs.AutomationTest/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentSharp.CoreLib" version="5.5.172" targetFramework="net45" />
+  <package id="FluentSharp.Moq" version="5.5.172" targetFramework="net45" />
+  <package id="FluentSharp.Web_3_5" version="5.5.172" targetFramework="net45" />
+  <package id="FluentSharp.Web_4_5" version="5.5.172" targetFramework="net45" />
+  <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
   <package id="Selenium.Support" version="2.42.0" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="2.42.0" targetFramework="net45" />
 </packages>
