--- a/TEAMMentor.BrowserAutomation.Test/TEAMMentor.BrowserAutomation.Test.csproj
+++ b/TEAMMentor.BrowserAutomation.Test/TEAMMentor.BrowserAutomation.Test.csproj
@@ -74,14 +74,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseTest.cs" />
+    <Compile Include="BaseClass\BaseTest.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="ExtensionMethods\ExtensionMethods.cs" />
+    <Compile Include="FlareTest\LandingPageTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TM3.5\ArticleDelete.cs" />
     <Compile Include="TMFour.cs" />
-    <Compile Include="TMTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
