--- a/TEAMMentor.BrowserAutomation.Test/TEAMMentor.BrowserAutomation.Test.csproj
+++ b/TEAMMentor.BrowserAutomation.Test/TEAMMentor.BrowserAutomation.Test.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F3EBAEA0-09DE-44B4-B1B8-D86580774046}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TEAMMentor.SauceLabs.AutomationTest</RootNamespace>
-    <AssemblyName>TEAMMentor.SauceLabs.AutomationTest</AssemblyName>
+    <RootNamespace>TEAMMentor.BrowserAutomation.Test</RootNamespace>
+    <AssemblyName>TEAMMentor.BrowserAutomation.Test.dll</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
